crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_multi_status_shared_body_handlers.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.handlers
---
# Generated by Phoenix Gen — implement the handler methods below.

from typing import Protocol

from .models import UpsertUserResponse


class Handlers(Protocol):
    async def upsert_user(self, id: str) -> UpsertUserResponse: ...
