crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_multi_status_shared_body_models.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.models
---
# Generated by Phoenix Gen — do not edit manually.

from __future__ import annotations

from pydantic import BaseModel


class User(BaseModel):
    id: int
    name: str


class UpsertUserResponse(BaseModel):
    status: int
    body: User | None = None
