crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_multipart_aliased_server.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.server
---
# Generated by Phoenix Gen — do not edit manually.

from typing import Annotated

from fastapi import APIRouter, File, Form, UploadFile

from .handlers import Handlers


def create_router(handlers: Handlers) -> APIRouter:
    router = APIRouter()

    @router.post("/api/upload", status_code=204)
    async def upload(
        avatar_image: Annotated[UploadFile, File(alias="avatarImage")],
        caption: str = Form(...),
    ) -> None:
        await handlers.upload(avatar_image=avatar_image, caption=caption)

    return router
