crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_multipart_handler.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.handlers
---
# Generated by Phoenix Gen — implement the handler methods below.

from typing import Protocol

from fastapi import UploadFile

from .models import UploadResult


class Handlers(Protocol):
    async def upload_avatar(self, avatar: UploadFile, caption: str) -> UploadResult: ...
