crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_multipart_models.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.models
---
# Generated by Phoenix Gen — do not edit manually.

from __future__ import annotations

from dataclasses import dataclass

from pydantic import BaseModel


@dataclass
class FileUpload:
    """A client-side file part for a multipart upload (filename + content bytes)."""

    filename: str
    content: bytes


class UploadResult(BaseModel):
    url: str
