crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_multipart_only_models.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.models
---
# Generated by Phoenix Gen — do not edit manually.

from __future__ import annotations

from dataclasses import dataclass


@dataclass
class FileUpload:
    """A client-side file part for a multipart upload (filename + content bytes)."""

    filename: str
    content: bytes
