crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_multipart_optional_client.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.client
---
# Generated by Phoenix Gen — do not edit manually.

from typing import Any

import httpx

from .models import FileUpload


class ApiClient:
    def __init__(self, base_url: str) -> None:
        self.base_url = base_url
        self.client = httpx.AsyncClient()

    async def upload(self, caption: str, avatar: FileUpload | None = None) -> None:
        files: dict[str, tuple[str, bytes]] = {}
        data: dict[str, Any] = {}
        if avatar is not None:
            files["avatar"] = (avatar.filename, avatar.content)
        data["caption"] = caption
        response = await self.client.post(
            f"{self.base_url}/api/maybe", files=files, data=data
        )
        response.raise_for_status()
