crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_multipart_optional_handler.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.handlers
---
# Generated by Phoenix Gen — implement the handler methods below.

from typing import Protocol

from fastapi import UploadFile


class Handlers(Protocol):
    async def upload(self, caption: str, avatar: UploadFile | None = None) -> None: ...
