crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_multipart_optional_server.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.server
---
# Generated by Phoenix Gen — do not edit manually.

from fastapi import APIRouter, Form, UploadFile

from .handlers import Handlers


def create_router(handlers: Handlers) -> APIRouter:
    router = APIRouter()

    @router.post("/api/maybe", status_code=204)
    async def upload(
        avatar: UploadFile | None = None,
        caption: str = Form(...),
    ) -> None:
        await handlers.upload(avatar=avatar, caption=caption)

    return router
