crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_multipart_server.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.server
---
# Generated by Phoenix Gen — do not edit manually.

from fastapi import APIRouter, Form, UploadFile

from .handlers import Handlers
from .models import UploadResult


def create_router(handlers: Handlers) -> APIRouter:
    router = APIRouter()

    @router.post("/api/avatar")
    async def upload_avatar(
        avatar: UploadFile,
        caption: str = Form(...),
    ) -> UploadResult:
        return await handlers.upload_avatar(avatar=avatar, caption=caption)

    return router
